--- a/app/src/main/res/drawable/background_card_petition.xml
+++ b/app/src/main/res/drawable/background_card_petition.xml
@@ -2,10 +2,10 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="@color/colorPrimaryDark"
-        android:width="2dp"/>
+        android:color="@color/azul_parte_sup"
+        android:width="1dp"/>
     <corners
         android:radius="8dp"/>
     <solid
-        android:color="@color/colorBlackLucid"/>
+        android:color="@color/azul_parte_inf"/>
 </shape>
